--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.4.4'
 	id 'io.spring.dependency-management' version '1.1.7'
+	id 'org.sonarqube' version '4.4.1.3373'
 }
 
 group = 'com.example'
@@ -45,4 +46,14 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+sonarqube {
+    properties {
+        property "sonar.projectKey", "image-service"
+        property "sonar.projectName", "Image Service"
+        property "sonar.projectVersion", "1.0"
+        property "sonar.host.url", "https://sonarcloud.io"
+        // В CI будет передаваться через env
+        property "sonar.login", System.getenv("SONAR_TOKEN")
+    }
 }
