--- a/build.gradle
+++ b/build.gradle
@@ -53,6 +53,7 @@ sonarqube {
         property "sonar.projectName", "Image Service"
         property "sonar.projectVersion", "1.0"
         property "sonar.host.url", "https://sonarcloud.io"
+		property "sonar.organization", "danilkhel"
         // В CI будет передаваться через env
         property "sonar.login", System.getenv("SONAR_TOKEN")
     }
