--- a/build.gradle
+++ b/build.gradle
@@ -49,7 +49,7 @@ tasks.named('test') {
 }
 sonarqube {
     properties {
-        property "sonar.projectKey", "image-service"
+        property "sonar.projectKey", "ImageServiceAPI2"
         property "sonar.projectName", "Image Service"
         property "sonar.projectVersion", "1.0"
         property "sonar.host.url", "https://sonarcloud.io"
