--- a/build.gradle
+++ b/build.gradle
@@ -48,14 +48,14 @@ tasks.named('test') {
 	useJUnitPlatform()
 }
 sonarqube {
-    properties {
-        property "sonar.projectKey", "ImageServiceAPI2"
-        property "sonar.projectName", "Image Service"
-        property "sonar.projectVersion", "1.0"
+	properties {
+		property "sonar.projectKey", "ImageServiceAPI2"
+		property "sonar.projectName", "Image Service"
+		property "sonar.projectVersion", "1.0"
+		property "sonar.host.url", "https://sonarcloud.io"
+		property "sonar.organization", "daniilkhel"
+		property "sonar.login", System.getenv("SONAR_TOKEN")
 		property "sonar.gradle.skipCompile", "true"
-        property "sonar.host.url", "https://sonarcloud.io"
-		property "sonar.organization", "danilkhel"
-        // В CI будет передаваться через env
-        property "sonar.login", System.getenv("SONAR_TOKEN")
-    }
+		property "sonar.branch.name", "main"
+	}
 }
